--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/e-commerce-PM4:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/e-commerce-pm4:latest
